compile under 1.4
git-svn-id: https://svn.objectstyle.org/repos/woproject/trunk@2774 930f2ab1-3212-0410-a8ea-d1eb4cc50a93